--- a/style.css
+++ b/style.css
@@ -1,17 +1,101 @@
 @import 'https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap';
 
 *{
-    margin: 10px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Mukta', sans-serif;
+
 }
 
-#titulo{
-    font-family: 'Mukta', sans-serif;
-    color:rgb(189, 150, 42);
-    width: 450px; 
-    height: 100px;
-    border: 1px solid rgb(70, 52, 30);
-    margin: 10px;
-    padding: 1% 2%;
-    box-sizing: border-box;
-    background-color: rgb(70, 52, 30);
+body{
+    background-color: #090e22;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    color: #fff
+}
+
+.hide{
+    display: none !important;
+}
+
+.container{
+    min-width: 400px;
+    min-height: 300px;
+    background-color:rgb(10, 32, 65);
+    padding: 2rem;
+}
+
+#calc-container h2{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.form-inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin-bottom: 1rem;
+}
+
+.form-control label{
+    font-weight: bold;
+    margin-bottom: .6rem;
+    color: #ccc;
+}
+
+.form-control input {
+    padding: .5rem 0.5rem;
+}
+
+.action-control{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+    gap: 1rem;
+}
+
+button {
+    text-transform: uppercase;
+    padding: .5rem 1.5rem;
+    background-color: rgb(226, 183, 42);
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    opacity: 0.9;
+    flex: 1;
+}
+
+button:hover{
+    opacity: 1;
+}
+
+#clear-btn {
+    background-color: rgb(65, 52, 52);
+}
+
+#result-container {
+    text-align: center;
+}
+
+#salL {
+    font-size: 1.7rem;
+    margin-bottom: 0.5rem;
+}
+
+#irpf #inss {
+    font-size: 1.2rem;
+    color:#ccc;
+}
+
+#back-btn {
+    margin-top: 1rem;
 }
